CHANGES
*******

1.68 (unreleased)
=================

- Nothing changed yet.


1.67 (2012-08-03)
=================

- Initial release.